@@ -1,7 +1,9 @@
 open Testing
 
 let tests =
-  [ Test_string.test_1;
+  [ Test_file.test_1;
+    Test_file.test_2;
+    Test_string.test_1;
     Test_string.test_2;
     Test_string.test_3;
     Test_string.test_4;
